<resources>
    <string name="app_name">RegistroCliente APP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="obrigaorio">*Obrigatório</string>
    <string name="error_generic">Erro inesperado ao executar a tarefa</string>
    <string name="usuario_inserido_sucesso">Usuário inserido com sucesso</string>
    <string name="usuario_atualizado_sucesso">Usuário atualizado com sucesso</string>
    <string name="usuario_removido_sucesso">Usuário removido com sucesso</string>

    <!--Rotina HOME-->
    <string name="card_item_tv_matricula">Matrícula</string>
    <string name="card_item_tv_cpf">CPF</string>

    <!--Rotina ADD e Editar-->
    <string name="nome_do_cliente">Nome cliente</string>
    <string name="matricula">Matrícula</string>
    <string name="cpf">CPF</string>
    <string name="e_mail">E-mail</string>
    <string name="adicionar">Adicionar</string>


</resources>